--- a/report.tex
+++ b/report.tex
@@ -2,11 +2,12 @@
 \usepackage[utf8]{inputenc}
 
 \title{Deep Learning- Final Course Project}
-\author{Student name (ID. 123456789),Student name ID. 987654321)}
+\author{Arye Amsalem (ID. 123456789),Miri Yungreis ID. 987654321)}
 \date{Submitted as final project report for the DL course, BIU, 2021}
 
 \usepackage{natbib}
 \usepackage{graphicx}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -37,13 +38,13 @@ Provide some final words and summarize what you have found from running the expe
 Note - your project will be evaluated for aspects, including the technique you selected, the rational of the experiments you decided to run, the insights you learned from this process and more. Remember, for the purpose of this course, the process that you demonstrate is very  important.
 
 \section{Code}
-
-Please provide a link to your code repository. It can be either a Private Github repository either a colab notebook with additional links for the data.
-
-
-Good luck!!
+\href{https://github.com/Arye182/Deep_Learning_Monet_Competition_Kaggle}
+%%%%%%%%%%% bibliography %%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{plain}
 \bibliography{references}
-    1. https://arxiv.org/pdf/1703.10593.pdf
-    2.
+\begin{thebibliography}{100}
+\bibitem{1} https://arxiv.org/pdf/1703.10593.pdf
+\bibitem{2}https://www.tensorflow.org/tutorials/generative/cyclegan
+\end{thebibliography}
+%%%%%%%%%% end bibliography %%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
