--- a/report.tex
+++ b/report.tex
@@ -38,13 +38,17 @@ Provide some final words and summarize what you have found from running the expe
 Note - your project will be evaluated for aspects, including the technique you selected, the rational of the experiments you decided to run, the insights you learned from this process and more. Remember, for the purpose of this course, the process that you demonstrate is very  important.
 
 \section{Code}
-\href{https://github.com/Arye182/Deep_Learning_Monet_Competition_Kaggle}
+this is the link to our github repository:
+
+\url{https://github.com/Arye182/Deep_Learning_Monet_Competition_Kaggle}
+
 %%%%%%%%%%% bibliography %%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{plain}
 \bibliography{references}
 \begin{thebibliography}{100}
-\bibitem{1} https://arxiv.org/pdf/1703.10593.pdf
-\bibitem{2}https://www.tensorflow.org/tutorials/generative/cyclegan
+\bibitem{1 - CycleGan Article} https://arxiv.org/pdf/1703.10593.pdf
+\bibitem{2 - CycleGan Documentation}https://www.tensorflow.org/tutorials/generative/cyclegan
+\bibitem{3 - CycleGan Implementation} https://www.youtube.com/watch?v=4LktBHGCNfw
 \end{thebibliography}
 %%%%%%%%%% end bibliography %%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
