--- a/training.ipynb
+++ b/training.ipynb
@@ -60,6 +60,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-10qViCbFZNJ"
+      },
+      "source": [
+        "#### instalations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8K324cGiFY3h"
+      },
+      "source": [
+        "!pip install -q kaggle\n",
+        "!pip install --upgrade --force-reinstall --no-deps kaggle"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "BGLrf8KUl09C"
       },
       "source": [
@@ -81,7 +102,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,11 +117,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9BkD2LwHl4SA",
-        "outputId": "effca5ef-390a-46da-e6b1-8692059c3183"
+        "id": "9BkD2LwHl4SA"
       },
       "source": [
         "try:\n",
@@ -117,17 +134,8 @@
         "    \n",
         "print(tf.__version__)"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Number of replicas: 1\n",
-            "2.5.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -144,8 +152,7 @@
         "id": "PXXIobBDmCj9"
       },
       "source": [
-        "!pip install -q kaggle\n",
-        "!pip install --upgrade --force-reinstall --no-deps kaggle\n",
+        "\n",
         "!mkdir -p ~/.kaggle\n",
         "!echo '{\"username\":\"YOUR_USERNAME\",\"key\":\"YOUR_API_KEY\"}' > /root/.kaggle/kaggle.json\n",
         "!chmod 600 /content/kaggle.json\n",
