--- a/training.ipynb
+++ b/training.ipynb
@@ -22,9 +22,9 @@
     "colab": {
       "name": "training.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -60,23 +60,42 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-10qViCbFZNJ"
+        "id": "62oqs_EPF6Oq"
       },
       "source": [
-        "#### instalations"
+        "#### installations"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8K324cGiFY3h"
+        "id": "r5xxD9FlF4V5",
+        "outputId": "9b81646b-7cd7-4226-e12d-d588c4ec3b07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!pip install -q kaggle\n",
         "!pip install --upgrade --force-reinstall --no-deps kaggle"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting kaggle\n",
+            "  Using cached kaggle-1.5.12-py3-none-any.whl\n",
+            "Installing collected packages: kaggle\n",
+            "  Attempting uninstall: kaggle\n",
+            "    Found existing installation: kaggle 1.5.12\n",
+            "    Uninstalling kaggle-1.5.12:\n",
+            "      Successfully uninstalled kaggle-1.5.12\n",
+            "Successfully installed kaggle-1.5.12\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -98,11 +117,12 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "import tensorflow_addons as tfa\n",
+        "from google.colab import files\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -152,17 +172,26 @@
         "id": "PXXIobBDmCj9"
       },
       "source": [
-        "\n",
-        "!mkdir -p ~/.kaggle\n",
-        "!echo '{\"username\":\"YOUR_USERNAME\",\"key\":\"YOUR_API_KEY\"}' > /root/.kaggle/kaggle.json\n",
-        "!chmod 600 /content/kaggle.json\n",
-        "!mkdir -p temp-data\n",
+        "files.upload()\n",
+        "! mkdir ~/.kaggle\n",
+        "! cp kaggle.json ~/.kaggle/\n",
+        "! chmod 600 ~/.kaggle/kaggle.json\n",
+        "! kaggle datasets list"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qkoDbc7uGf4D"
+      },
+      "source": [
         "print(\"starting to download data!\")\n",
+        "!mkdir -p temp-data\n",
         "!kaggle competitions download -c gan-getting-started -p temp-data\n",
         "!unzip temp-data/gan-getting-started.zip\n",
-        "print(\"finished to download data\")\n",
-        "\n",
-        "\n"
+        "print(\"finished to download data\")"
       ],
       "execution_count": null,
       "outputs": []
